--- a/src/wwwroot/public/index.html
+++ b/src/wwwroot/public/index.html
@@ -25,6 +25,9 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+  <script>
+    window.env = JSON.parse('%REACT_APP_ENV%');
+  </script>
 </body>
 
 </html>
